--- a/es/projects/index.html
+++ b/es/projects/index.html
@@ -8,10 +8,10 @@
 <link rel="icon" type="image/png" sizes="32x32" href="https://gtello.github.io/images/favicon-32x32.png" />
 <link rel="icon" type="image/png" sizes="16x16" href="https://gtello.github.io/images/favicon-16x16.png" />
 <link rel="manifest" href="https://gtello.github.io/images/site.webmanifest" />
-<link rel="mask-icon" href="https://gtello.github.io/images/safari-pinned-tab.svg" color='#5bbad5' />
+
 <link rel="shortcut icon" href="https://gtello.github.io/images/favicon.ico" />
-<meta name="msapplication-TileColor" content="#da532c" />
-<meta name="msapplication-config" content="https://gtello.github.io/images/browserconfig.xml" />
+<meta name="msapplication-TileColor" content="#4385BE" />
+
 
 <title>Proyectos | Gabriel Tello</title>
 <meta name="title" content="Proyectos" />
