--- a/es/404.html
+++ b/es/404.html
@@ -16,7 +16,7 @@
 <title>404</title>
 <meta name="title" content="404 Page not found" />
 <meta name="description" content="Welcome to my website, I&#39;ll be posting my projects and blogs here." />
-<meta name="keywords" content="" />
+<meta name="keywords" content="eternalblue,metasploit,mimikatz,pentesting,persistence,reverse-shell,windows,writeup," />
 
 
 
@@ -74,6 +74,8 @@
 
   <a href="/es/projects/">Proyectos</a>
 
+  <a href="/es/writeups/">Reportes</a>
+
 <a href='https://gtello.github.io/index.xml'>RSS</a>
 
 
@@ -92,7 +94,7 @@
 </header>
   <main id="main-content">
 <h1>404</h1>
-<h2>ʕノ•ᴥ•ʔノ ︵ ┻━┻</h2>
+<h2>(╯°□°)╯ ︵ ┻━┻</h2>
 
   </main>
   <footer><small>
