--- a/404.html
+++ b/404.html
@@ -16,7 +16,7 @@
 <title>404</title>
 <meta name="title" content="404 Page not found" />
 <meta name="description" content="Welcome to my website, I&#39;ll be posting my projects and blogs here." />
-<meta name="keywords" content="cms,eternalblue,ftp,hash cracking,lfi,linux,metasploit,mimikatz,pentesting,persistence,red team,reverse shell,tryhackme,windows,writeup," />
+<meta name="keywords" content="aws,blue team,cms,eternalblue,ftp,hash cracking,lfi,linux,metasploit,mimikatz,pentesting,persistence,project,purple team,red team,reverse shell,siem,soc,tryhackme,wazuh,windows,writeup," />
 
 
 
