added alfread writeup

--- a/es/writeups/bolt/index.html
+++ b/es/writeups/bolt/index.html
@@ -163,16 +163,16 @@ Esta es una guía paso a paso presentada en formato de reporte profesional sobre
 <table>
   <thead>
       <tr>
-          <th style="text-align: left">Sistema Operativo</th>
-          <th style="text-align: left">Dirección IP</th>
-          <th style="text-align: left">Puertos Abiertos</th>
+          <th>Sistema Operativo</th>
+          <th>Dirección IP</th>
+          <th>Puertos Abiertos</th>
       </tr>
   </thead>
   <tbody>
       <tr>
-          <td style="text-align: left">Debian</td>
-          <td style="text-align: left">192.168.138.132</td>
-          <td style="text-align: left">22 (SSH), 80 (HTTP), 111 (RPCbind), 2049 (NFS), 8080 (HTTP Alternate)</td>
+          <td>Debian</td>
+          <td>192.168.138.132</td>
+          <td>22 (SSH), 80 (HTTP), 111 (RPCbind), 2049 (NFS), 8080 (HTTP Alternate)</td>
       </tr>
   </tbody>
 </table>
@@ -238,26 +238,26 @@ Esta es una guía paso a paso presentada en formato de reporte profesional sobre
 <table>
   <thead>
       <tr>
-          <th style="text-align: left">Herramienta</th>
-          <th style="text-align: left">Descripción</th>
+          <th>Herramienta</th>
+          <th>Descripción</th>
       </tr>
   </thead>
   <tbody>
       <tr>
-          <td style="text-align: left">nmap</td>
-          <td style="text-align: left">Utilizada para el escaneo de red y detección de puertos y servicios abiertos en la máquina objetivo.</td>
+          <td>nmap</td>
+          <td>Utilizada para el escaneo de red y detección de puertos y servicios abiertos en la máquina objetivo.</td>
       </tr>
       <tr>
-          <td style="text-align: left">fcrackzip</td>
-          <td style="text-align: left">Herramienta empleada para realizar un ataque de fuerza bruta a archivos zip.</td>
+          <td>fcrackzip</td>
+          <td>Herramienta empleada para realizar un ataque de fuerza bruta a archivos zip.</td>
       </tr>
       <tr>
-          <td style="text-align: left">wfuzz</td>
-          <td style="text-align: left">Usada para realizar fuerza bruta en los directorios web, descubriendo rutas sensibles.</td>
+          <td>wfuzz</td>
+          <td>Usada para realizar fuerza bruta en los directorios web, descubriendo rutas sensibles.</td>
       </tr>
       <tr>
-          <td style="text-align: left">GTFObins</td>
-          <td style="text-align: left">Recurso en línea que proporcionó el método para escalar privilegios utilizando el binario zip con permisos especiales de sudo.</td>
+          <td>GTFObins</td>
+          <td>Recurso en línea que proporcionó el método para escalar privilegios utilizando el binario zip con permisos especiales de sudo.</td>
       </tr>
   </tbody>
 </table>
