--- a/es/writeups/gamezone/index.html
+++ b/es/writeups/gamezone/index.html
@@ -159,16 +159,16 @@
 <table>
   <thead>
       <tr>
-          <th style="text-align: left">Sistema Operativo</th>
-          <th style="text-align: left">Dirección IP</th>
-          <th style="text-align: left">Puertos Abiertos</th>
+          <th>Sistema Operativo</th>
+          <th>Dirección IP</th>
+          <th>Puertos Abiertos</th>
       </tr>
   </thead>
   <tbody>
       <tr>
-          <td style="text-align: left">Ubuntu 16.04.6</td>
-          <td style="text-align: left">10.10.254.53</td>
-          <td style="text-align: left">22 (SSH), 80 (HTTP)</td>
+          <td>Ubuntu 16.04.6</td>
+          <td>10.10.254.53</td>
+          <td>22 (SSH), 80 (HTTP)</td>
       </tr>
   </tbody>
 </table>
@@ -200,30 +200,30 @@
 <table>
   <thead>
       <tr>
-          <th style="text-align: left">Herramienta</th>
-          <th style="text-align: left">Descripción</th>
+          <th>Herramienta</th>
+          <th>Descripción</th>
       </tr>
   </thead>
   <tbody>
       <tr>
-          <td style="text-align: left"><strong>nmap</strong></td>
-          <td style="text-align: left">Escaneo de red y detección de puertos abiertos.</td>
+          <td><strong>nmap</strong></td>
+          <td>Escaneo de red y detección de puertos abiertos.</td>
       </tr>
       <tr>
-          <td style="text-align: left"><strong>Burp Suite</strong></td>
-          <td style="text-align: left">Captura y análisis de solicitudes HTTP para SQLi automatizado.</td>
+          <td><strong>Burp Suite</strong></td>
+          <td>Captura y análisis de solicitudes HTTP para SQLi automatizado.</td>
       </tr>
       <tr>
-          <td style="text-align: left"><strong>sqlmap</strong></td>
-          <td style="text-align: left">Pruebas de SQLi y extracción de datos de la base de datos.</td>
+          <td><strong>sqlmap</strong></td>
+          <td>Pruebas de SQLi y extracción de datos de la base de datos.</td>
       </tr>
       <tr>
-          <td style="text-align: left"><strong>John the Ripper</strong></td>
-          <td style="text-align: left">Descifrado del hash de la contraseña del usuario <code>agent47</code> para acceso SSH.</td>
+          <td><strong>John the Ripper</strong></td>
+          <td>Descifrado del hash de la contraseña del usuario <code>agent47</code> para acceso SSH.</td>
       </tr>
       <tr>
-          <td style="text-align: left"><strong>Exploit CVE-2012-2982</strong></td>
-          <td style="text-align: left">Vulnerabilidad en Webmin que permitió escalación de privilegios a root.</td>
+          <td><strong>Exploit CVE-2012-2982</strong></td>
+          <td>Vulnerabilidad en Webmin que permitió escalación de privilegios a root.</td>
       </tr>
   </tbody>
 </table>
