--- a/es/writeups/steelmountain/index.html
+++ b/es/writeups/steelmountain/index.html
@@ -166,16 +166,16 @@
 <table>
   <thead>
       <tr>
-          <th style="text-align: left">Sistema Operativo</th>
-          <th style="text-align: left">Dirección IP</th>
-          <th style="text-align: left">Puertos Abiertos</th>
+          <th>Sistema Operativo</th>
+          <th>Dirección IP</th>
+          <th>Puertos Abiertos</th>
       </tr>
   </thead>
   <tbody>
       <tr>
-          <td style="text-align: left">Windows Server 2008</td>
-          <td style="text-align: left">10.10.128.109</td>
-          <td style="text-align: left">80 (HTTP), 135 (RPC), 139 (NetBIOS), 445 (SMB), 3389 (RDP), 5985 (WinRM HTTP), 8080 (HTTP-Alternate), 47001 (WinRM HTTPS), and 49152-49164 (Dynamic RPC range)</td>
+          <td>Windows Server 2008</td>
+          <td>10.10.128.109</td>
+          <td>80 (HTTP), 135 (RPC), 139 (NetBIOS), 445 (SMB), 3389 (RDP), 5985 (WinRM HTTP), 8080 (HTTP-Alternate), 47001 (WinRM HTTPS), and 49152-49164 (Dynamic RPC range)</td>
       </tr>
   </tbody>
 </table>
@@ -226,26 +226,26 @@
 <table>
   <thead>
       <tr>
-          <th style="text-align: left">Herramienta</th>
-          <th style="text-align: left">Descripción</th>
+          <th>Herramienta</th>
+          <th>Descripción</th>
       </tr>
   </thead>
   <tbody>
       <tr>
-          <td style="text-align: left">nmap</td>
-          <td style="text-align: left">Para el reconocimiento inicial y detección de servicios y puertos abiertos.</td>
+          <td>nmap</td>
+          <td>Para el reconocimiento inicial y detección de servicios y puertos abiertos.</td>
       </tr>
       <tr>
-          <td style="text-align: left">metasploit</td>
-          <td style="text-align: left">Para lanzar el exploit contra el servidor Rejetto HTTP.</td>
+          <td>metasploit</td>
+          <td>Para lanzar el exploit contra el servidor Rejetto HTTP.</td>
       </tr>
       <tr>
-          <td style="text-align: left">PowerUp.ps1</td>
-          <td style="text-align: left">Script de PowerShell para analizar configuraciones de privilegios en sistemas Windows.</td>
+          <td>PowerUp.ps1</td>
+          <td>Script de PowerShell para analizar configuraciones de privilegios en sistemas Windows.</td>
       </tr>
       <tr>
-          <td style="text-align: left">msfvenom</td>
-          <td style="text-align: left">Para generar el payload de reverse shell que ejecutamos para obtener permisos de administrador.</td>
+          <td>msfvenom</td>
+          <td>Para generar el payload de reverse shell que ejecutamos para obtener permisos de administrador.</td>
       </tr>
   </tbody>
 </table>
