--- a/writeups/academy/index.html
+++ b/writeups/academy/index.html
@@ -163,16 +163,16 @@ This is a step-by-step guide presented in a professional report format on a pene
 <table>
   <thead>
       <tr>
-          <th style="text-align: left">Operating System</th>
-          <th style="text-align: left">IP Address</th>
-          <th style="text-align: left">Open Ports</th>
+          <th>Operating System</th>
+          <th>IP Address</th>
+          <th>Open Ports</th>
       </tr>
   </thead>
   <tbody>
       <tr>
-          <td style="text-align: left">Debian 10</td>
-          <td style="text-align: left">192.168.138.128</td>
-          <td style="text-align: left">21 (FTP), 22 (SSH), 80 (HTTP)</td>
+          <td>Debian 10</td>
+          <td>192.168.138.128</td>
+          <td>21 (FTP), 22 (SSH), 80 (HTTP)</td>
       </tr>
   </tbody>
 </table>
@@ -249,30 +249,30 @@ This is a step-by-step guide presented in a professional report format on a pene
 <table>
   <thead>
       <tr>
-          <th style="text-align: left">Tool</th>
-          <th style="text-align: left">Description</th>
+          <th>Tool</th>
+          <th>Description</th>
       </tr>
   </thead>
   <tbody>
       <tr>
-          <td style="text-align: left">Nmap</td>
-          <td style="text-align: left">Used for network scanning and detection of open ports and services on the target machine.</td>
+          <td>Nmap</td>
+          <td>Used for network scanning and detection of open ports and services on the target machine.</td>
       </tr>
       <tr>
-          <td style="text-align: left">hashcat</td>
-          <td style="text-align: left">Used to crack the MD5 hash obtained from the FTP server.</td>
+          <td>hashcat</td>
+          <td>Used to crack the MD5 hash obtained from the FTP server.</td>
       </tr>
       <tr>
-          <td style="text-align: left">wfuzz</td>
-          <td style="text-align: left">Used for brute-forcing web directories, discovering sensitive paths.</td>
+          <td>wfuzz</td>
+          <td>Used for brute-forcing web directories, discovering sensitive paths.</td>
       </tr>
       <tr>
-          <td style="text-align: left">pspy</td>
-          <td style="text-align: left">Program used to monitor processes on Linux without needing root permissions.</td>
+          <td>pspy</td>
+          <td>Program used to monitor processes on Linux without needing root permissions.</td>
       </tr>
       <tr>
-          <td style="text-align: left">LinPEAS</td>
-          <td style="text-align: left">Script used to identify potential privilege escalation paths on the server.</td>
+          <td>LinPEAS</td>
+          <td>Script used to identify potential privilege escalation paths on the server.</td>
       </tr>
   </tbody>
 </table>
