--- a/writeups/gamezone/index.html
+++ b/writeups/gamezone/index.html
@@ -159,16 +159,16 @@
 <table>
   <thead>
       <tr>
-          <th style="text-align: left">Operating System</th>
-          <th style="text-align: left">IP Address</th>
-          <th style="text-align: left">Open Ports</th>
+          <th>Operating System</th>
+          <th>IP Address</th>
+          <th>Open Ports</th>
       </tr>
   </thead>
   <tbody>
       <tr>
-          <td style="text-align: left">Ubuntu 16.04.6</td>
-          <td style="text-align: left">10.10.254.53</td>
-          <td style="text-align: left">22 (SSH), 80 (HTTP)</td>
+          <td>Ubuntu 16.04.6</td>
+          <td>10.10.254.53</td>
+          <td>22 (SSH), 80 (HTTP)</td>
       </tr>
   </tbody>
 </table>
@@ -200,30 +200,30 @@
 <table>
   <thead>
       <tr>
-          <th style="text-align: left">Tool</th>
-          <th style="text-align: left">Description</th>
+          <th>Tool</th>
+          <th>Description</th>
       </tr>
   </thead>
   <tbody>
       <tr>
-          <td style="text-align: left"><strong>nmap</strong></td>
-          <td style="text-align: left">Network scanning and open port detection.</td>
+          <td><strong>nmap</strong></td>
+          <td>Network scanning and open port detection.</td>
       </tr>
       <tr>
-          <td style="text-align: left"><strong>Burp Suite</strong></td>
-          <td style="text-align: left">Capturing and analyzing HTTP requests for SQLi.</td>
+          <td><strong>Burp Suite</strong></td>
+          <td>Capturing and analyzing HTTP requests for SQLi.</td>
       </tr>
       <tr>
-          <td style="text-align: left"><strong>sqlmap</strong></td>
-          <td style="text-align: left">SQLi testing and data extraction from the database.</td>
+          <td><strong>sqlmap</strong></td>
+          <td>SQLi testing and data extraction from the database.</td>
       </tr>
       <tr>
-          <td style="text-align: left"><strong>John the Ripper</strong></td>
-          <td style="text-align: left">Used to crack the user <code>agent47</code> password hash for SSH access.</td>
+          <td><strong>John the Ripper</strong></td>
+          <td>Used to crack the user <code>agent47</code> password hash for SSH access.</td>
       </tr>
       <tr>
-          <td style="text-align: left"><strong>Exploit CVE-2012-2982</strong></td>
-          <td style="text-align: left">Webmin vulnerability enabling root access.</td>
+          <td><strong>Exploit CVE-2012-2982</strong></td>
+          <td>Webmin vulnerability enabling root access.</td>
       </tr>
   </tbody>
 </table>
