--- a/writeups/steelmountain/index.html
+++ b/writeups/steelmountain/index.html
@@ -164,16 +164,16 @@
 <table>
   <thead>
       <tr>
-          <th style="text-align: left">Operating System</th>
-          <th style="text-align: left">IP Address</th>
-          <th style="text-align: left">Open Ports</th>
+          <th>Operating System</th>
+          <th>IP Address</th>
+          <th>Open Ports</th>
       </tr>
   </thead>
   <tbody>
       <tr>
-          <td style="text-align: left">Windows Server 2008</td>
-          <td style="text-align: left">10.10.128.109</td>
-          <td style="text-align: left">80 (HTTP), 135 (RPC), 139 (NetBIOS), 445 (SMB), 3389 (RDP), 5985 (WinRM HTTP), 8080 (HTTP-Alternate), 47001 (WinRM HTTPS), and 49152-49164 (Dynamic RPC range)</td>
+          <td>Windows Server 2008</td>
+          <td>10.10.128.109</td>
+          <td>80 (HTTP), 135 (RPC), 139 (NetBIOS), 445 (SMB), 3389 (RDP), 5985 (WinRM HTTP), 8080 (HTTP-Alternate), 47001 (WinRM HTTPS), and 49152-49164 (Dynamic RPC range)</td>
       </tr>
   </tbody>
 </table>
@@ -210,26 +210,26 @@
 <table>
   <thead>
       <tr>
-          <th style="text-align: left">Tool</th>
-          <th style="text-align: left">Description</th>
+          <th>Tool</th>
+          <th>Description</th>
       </tr>
   </thead>
   <tbody>
       <tr>
-          <td style="text-align: left">nmap</td>
-          <td style="text-align: left">For initial reconnaissance and detection of open ports and services.</td>
+          <td>nmap</td>
+          <td>For initial reconnaissance and detection of open ports and services.</td>
       </tr>
       <tr>
-          <td style="text-align: left">metasploit</td>
-          <td style="text-align: left">To launch the exploit against the Rejetto HTTP server.</td>
+          <td>metasploit</td>
+          <td>To launch the exploit against the Rejetto HTTP server.</td>
       </tr>
       <tr>
-          <td style="text-align: left">PowerUp.ps1</td>
-          <td style="text-align: left">PowerShell script for analyzing privilege configurations on Windows systems.</td>
+          <td>PowerUp.ps1</td>
+          <td>PowerShell script for analyzing privilege configurations on Windows systems.</td>
       </tr>
       <tr>
-          <td style="text-align: left">msfvenom</td>
-          <td style="text-align: left">To generate the reverse shell payload used to obtain administrator permissions.</td>
+          <td>msfvenom</td>
+          <td>To generate the reverse shell payload used to obtain administrator permissions.</td>
       </tr>
   </tbody>
 </table>
