--- a/es/writeups/eternalblue/index.html
+++ b/es/writeups/eternalblue/index.html
@@ -174,6 +174,7 @@ Esta es una guía paso a paso presentada en formato de reporte profesional sobre
 <div style="text-align: center;">
   <img src="/images/posts/eternalblue/image1.png" alt="comando nmap" />
 </div>
+<br>
 <center><em>Figura 1:</em> Comando nmap y resultados</center>
 <h3 id="resultado-del-reconocimiento">Resultado del reconocimiento</h3>
 <table>
@@ -196,79 +197,79 @@ Esta es una guía paso a paso presentada en formato de reporte profesional sobre
 <p>El servicio SMB ejecutándose en el puerto 445 en una máquina Windows 7 indica una potencial vulnerabilidad al exploit EternalBlue. Un escaneo adicional con un script de nmap reveló que el sistema era efectivamente vulnerable a CVE-2017-0144 (EternalBlue).</p>
 <div style="text-align: center;">
   <img src="/images/posts/eternalblue/image2.png" alt="confirmación de nmap" />
-</div>
+</div><br>
 <center><em>Figura 2:</em> Confirmación de vulnerabilidad EternalBlue</center>
 <h2 id="explotación">Explotación</h2>
 <p>Para explotar la vulnerabilidad se utilizó el framework Metasploit. Se seleccionó y configuró el módulo EternalBlue.</p>
 <div style="text-align: center;">
   <img src="/images/posts/eternalblue/image3.png" alt="configuración de exploit" />
-</div>
+</div><br>
 <center><em>Figura 3:</em> Configuración del exploit</center>
 <p>Se configuró un payload de tipo reverse shell, lo que permitió obtener una conexión remota con control total del sistema. El exploit proporcionó privilegios SYSTEM, por lo que no fue necesaria una elevación adicional.</p>
 <div style="text-align: center;">
   <img src="/images/posts/eternalblue/image4.png" alt="ejecución de exploit" />
-</div>
+</div><br>
 <center><em>Figura 4:</em> Resultado de la ejecución del exploit</center>
 <h2 id="post-explotación">Post-Explotación</h2>
 <p>Una vez establecida la sesión de meterpreter, se procedió a realizar actividades de post-explotación.</p>
 <div style="text-align: center;">
   <img src="/images/posts/eternalblue/image5.png" alt="enumeración de usuarios" />
-</div>
+</div><br>
 <center><em>Figura 5:</em> Enumeración de usuarios</center>
 <h3 id="extracción-de-credenciales">Extracción de credenciales</h3>
 <p>Se utilizó la herramienta Mimikatz mediante el módulo kiwi para extraer credenciales como contraseñas y hashes del sistema operativo Windows.</p>
 <div style="text-align: center;">
   <img src="/images/posts/eternalblue/image6.png" alt="ejecución de mimikatz" />
-</div>
+</div><br>
 <center><em>Figura 6:</em> Ejecución de Mimikatz</center>
 <p>El archivo SAM (Security Account Manager) almacena los hashes de contraseñas de usuarios locales en un sistema Windows. Utilizando el comando <code>kiwi_cmd lsadump::sam</code> en meterpreter, se extrajo el archivo SAM que contiene los hashes NTLM de las contraseñas de los usuarios locales.</p>
 <div style="text-align: center;">
   <img src="/images/posts/eternalblue/image7.png" alt="dump de hashes de usuarios locales" />
-</div>
+</div><br>
 <center><em>Figura 7:</em> Dump de hashes de usuarios locales</center>
 <h3 id="uso-de-credenciales-cifradas">Uso de credenciales cifradas</h3>
 <p>Una vez obtenidos los hashes de contraseñas, se utilizó la técnica de Pass The Hash (PTH) para acceder a otros recursos del sistema sin necesidad de conocer las contraseñas en texto plano. Este método permite autenticarse y moverse lateralmente entre sistemas Windows, utilizando únicamente el hash de la contraseña.
 Se utilizó la herramienta <code>crackmapexec</code> para autenticarse remotamente en otros sistemas o servicios de la red usando el hash de un usuario.</p>
 <div style="text-align: center;">
   <img src="/images/posts/eternalblue/image8.png" alt="ejecución de crackmapexec" />
-</div>
+</div><br>
 <center><em>Figura 8:</em> Ejecución de CrackMapExec</center>
 <h3 id="persistencia">Persistencia</h3>
 <p>A través de la persistencia, se puede mantener el acceso a un sistema comprometido incluso si este se reinicia, lo cual permite restablecer una conexión en el futuro sin tener que repetir el proceso inicial de explotación.
 En este caso, se configuró un script de persistencia con el módulo <code>windows/local/persistence_service</code>, el cual genera y carga un ejecutable en el host remoto y luego lo convertirá en un servicio persistente.</p>
 <div style="text-align: center;">
   <img src="/images/posts/eternalblue/image9.png" alt="ejecución de persistencia" />
-</div>
+</div><br>
 <center><em>Figura 9:</em> Ejecución de servicio de persistencia.</center>
 <p>Al ejecutar este módulo, meterpreter instala un servicio en el sistema comprometido que establece una conexión saliente de tipo reverse shell cada vez que se reinicia el sistema. Esto significa que, incluso si un atacante pierde la conexión inicial, este puede recuperar el acceso sin realizar de nuevo el exploit, siempre que el sistema esté encendido y el atacante esté escuchando en el puerto configurado.</p>
 <h3 id="comprobación-de-persistencia">Comprobación de persistencia</h3>
 <p>Para comprobar que la persistencia fue ejecutada correctamente, se cerraron las sesiones de meterpreter abiertas.</p>
 <div style="text-align: center;">
   <img src="/images/posts/eternalblue/image10.png" alt="cierre de sesiones" />
-</div>
+</div><br>
 <center><em>Figura 10:</em> Cierre de sesiones</center>
 <p>Se creó un resource script para automatizar tareas repetitivas en Metasploit, facilitando la reconexión a la máquina comprometida con tan solo ejecutar el script.</p>
 <div style="text-align: center;">
   <img src="/images/posts/eternalblue/image11.png" alt="resource script para metasploit" />
-</div>
+</div><br>
 <center><em>Figura 11:</em> Resource script para Metasploit</center>
 <p>Una vez ejecutado el script, se observa cómo se configura el payload y el módulo automáticamente para consecuentemente conectarse a la máquina, comprobando que la persistencia funciona correctamente.</p>
 <div style="text-align: center;">
   <img src="/images/posts/eternalblue/image12.png" alt="ejecución del resource script" />
-</div>
+</div><br>
 <center><em>Figura 12:</em> Ejecución del resource script</center>
 <h3 id="limpieza-de-la-persistencia">Limpieza de la persistencia</h3>
 <p>Para realizar la limpieza del sistema atacado, se cerró y eliminó el servicio creado llamado lsass1 mediante comandos <code>sc.exe</code>, lo que garantiza la eliminación del servicio de persistencia en el sistema. Además, se utilizó <code>taskkill.exe</code> para terminar a la fuerza el proceso asociado <code>sdvj.exe</code>, que estaba vinculado al payload de persistencia.</p>
 <div style="text-align: center;">
   <img src="/images/posts/eternalblue/image13.png" alt="limpieza de persistencia" />
-</div>
+</div><br>
 <center><em>Figura 13:</em> Limpieza de persistencia</center>
 <p>Después de completar estos pasos, la sesión de Meterpreter se cerró de forma segura, lo que confirmó la finalización de la conexión. De esta manera se eliminaron todos los artefactos del mecanismo de persistencia, sin dejar puntos de acceso no autorizados en el sistema.</p>
 <h2 id="banderas">Banderas</h2>
 <p>Se procedió a realizar la búsqueda de las banderas con el comando <code>search</code> en meterpreter y se usó el comando <code>type</code> para mostrar su contenido.</p>
 <div style="text-align: center;">
   <img src="/images/posts/eternalblue/image14.png" alt="ejecución de comando type" />
-</div>
+</div><br>
 <center><em>Figura 14:</em> Ejecución del comando type</center>
 <p>De esa manera se encontraron las dos banderas, las cuales son:</p>
 <table>
